--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,17 @@
           <artifactId>aws-lambda-java-core</artifactId>
           <version>1.2.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-kinesis</artifactId>
+            <version>1.12.729</version>
+        </dependency>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-lambda-java-events</artifactId>
+            <version>3.11.5</version>
+        </dependency>
+
     </dependencies>
 
     <build>
